refact: fixed PP on desktop and mobile

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
           </div>
           <!-- /.col -->
           <div class="col-32">
-            <div class="card design__card">
+            <div class="card design__card design__card--margin">
               <img src="img/design/design-3.jpg" alt="Полный ремонт" class="card__image">
               <div class="card__text design-card__text">
                 <h3 class="card__title design-card__title">Полный</h3>
@@ -477,7 +477,7 @@
           </div>
           <!-- /.col -->
           <div class="col-32">
-            <div class="card team-card team__card">
+            <div class="card team-card team__card team__card--margin">
               <div class="card__icon card__icon-third-mobile">
                 <img src="img/team/icon-3.svg" alt="Чемодан">
               </div>
