--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="container">
       <div class="menu">
-        <div class="logo menu__logo">Repair Design Project</div>
+        <div class="logo menu__logo"><a href="#" class="logo__text">Repair Design Project</a></div>
         <nav class="nav menu__nav">
           <a href="#main" class="nav__item">Главная</a>
           <a href="#projects" class="nav__item">Проекты</a>
@@ -549,7 +549,7 @@
     <div class="footer__menu">
       <div class="container">
         <div class="menu">
-          <div class="logo menu__logo">Repair Design Project</div>
+          <div class="logo menu__logo"><a href="#" class="logo__text">Repair Design Project</a></div>
           <nav class="nav menu__nav">
             <a href="#main" class="nav__item">Главная</a>
             <a href="#projects" class="nav__item">Проекты</a>
