--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
-  <script id="ymap_lazy" data-skip-moving="true" async="" src="https://api-maps.yandex.ru/2.1/?apikey=ab8d2379-f0eb-45bc-a85b-2fe4bab5e946&lang=ru_RU"></script>
   <title>Турецкий Ремонт</title>
 </head>
 <body>
@@ -311,194 +310,196 @@
       <!-- /.contaier -->
     </section>
     <!-- /.section types -->
-    <section class="section design">
-      <div class="container">
-        <div class="section-title design__section-title">
-          <h2 class="section-title__heading section-title__heading--black design__heading">Дизайн проект</h2>
-          <!-- /.section-title__heading -->
-          <div class="section-title__image design__image">
-            <img src="img/linear.svg" alt="linear">
+    <div class="team-bg-lines">
+      <section class="section design">
+        <div class="container">
+          <div class="section-title design__section-title">
+            <h2 class="section-title__heading section-title__heading--black design__heading">Дизайн проект</h2>
+            <!-- /.section-title__heading -->
+            <div class="section-title__image design__image">
+              <img src="img/linear.svg" alt="linear">
+            </div>
+            <!-- /.section-title__image -->
+            <p class="section-title__text design__text">
+              Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ
+            </p>
           </div>
-          <!-- /.section-title__image -->
-          <p class="section-title__text design__text">
-            Дизайн-проект не только помогает сделать ремонт вашей квартиры более современным, но и значительно удешевляет материалы и сокращает время ремонтных работ
-          </p>
+          <!-- /.section-title -->
+          <div class="row design__row">
+            <div class="col-32">
+              <div class="card design-card design__card">
+                <img src="img/design/design-1.jpg" alt="Минимальный ремонт" class="card__image">
+                <div class="card__text design-card__text">
+                  <h3 class="card__title design-card__title">Минимальный</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list design-card__list">
+                    <li class="card__item">Измерительные чертежи</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Перепланировка</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Планировка мебели</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Сантехнический план</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag design-card__pricetag design-card__pricetag--lg">150 руб / М<sup>2</sup></strong>
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col-32">
+              <div class="card design__card">
+                <img src="img/design/design-2.jpg" alt="Стандартный ремонт" class="card__image">
+                <div class="card__text design-card__text">
+                  <h3 class="card__title design-card__title">Стандартный</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list design-card__list">
+                    <li class="card__item">Измерительные чертежи</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Перепланировка</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Планировка мебели</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План этажей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План электрики</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План света</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag design-card__pricetag">400 руб / М<sup>2</sup></strong>
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col-32">
+              <div class="card design__card design__card--margin">
+                <img src="img/design/design-3.jpg" alt="Полный ремонт" class="card__image">
+                <div class="card__text design-card__text">
+                  <h3 class="card__title design-card__title">Полный</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list design-card__list">
+                    <li class="card__item">Измерительные чертежи</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Перепланировка</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Планировка мебели</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План этажей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План электрики</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">План света</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Стенные развертки</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">3D визуализация</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Смета на материалы</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Выезд на подбор материалов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Выбор мебели</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag design-card__pricetag">900 руб / М<sup>2</sup></strong>
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+          </div>
+          <!-- /.row -->
         </div>
-        <!-- /.section-title -->
-        <div class="row design__row">
-          <div class="col-32">
-            <div class="card design-card design__card">
-              <img src="img/design/design-1.jpg" alt="Минимальный ремонт" class="card__image">
-              <div class="card__text design-card__text">
-                <h3 class="card__title design-card__title">Минимальный</h3>
-                <!-- /.card__title -->
-                <ul class="card__list design-card__list">
-                  <li class="card__item">Измерительные чертежи</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Перепланировка</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Планировка мебели</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Сантехнический план</li>
-                  <!-- /.card__item -->
-                </ul>
-                <!-- /.card__list -->
-                <strong class="card__pricetag design-card__pricetag design-card__pricetag--lg">150 руб / М<sup>2</sup></strong>
-              </div>
-              <!-- /.card__text -->
+        <!-- /.contaier -->
+      </section>
+      <section class="section team" id="team">
+        <div class="container">
+          <div class="section-title team__section-title">
+            <h2 class="section-title__heading team__heading">Наша команда</h2>
+            <!-- /.section-title__heading -->
+            <div class="section-title__image team__image">
+              <img src="img/team.svg" alt="team">
             </div>
-            <!-- /.card -->
+            <!-- /.section-title__image -->
+            <p class="section-title__text team__text">
+              Наша команда помогла стать счастливее более чем 500 семьям, и мы не собираемся останавливаться
+            </p>
           </div>
-          <!-- /.col -->
-          <div class="col-32">
-            <div class="card design__card">
-              <img src="img/design/design-2.jpg" alt="Стандартный ремонт" class="card__image">
-              <div class="card__text design-card__text">
-                <h3 class="card__title design-card__title">Стандартный</h3>
-                <!-- /.card__title -->
-                <ul class="card__list design-card__list">
-                  <li class="card__item">Измерительные чертежи</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Перепланировка</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Планировка мебели</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План потолков</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План этажей</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План электрики</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План света</li>
-                  <!-- /.card__item -->
-                </ul>
-                <!-- /.card__list -->
-                <strong class="card__pricetag design-card__pricetag">400 руб / М<sup>2</sup></strong>
+          <!-- /.section-title -->
+          <div class="row team__row">
+            <div class="col-32">
+              <div class="card team-card team__card">
+                <img src="img/team/team-1.jpg" alt="Алексей Колмаков" class="card__image team-card__image">
+                <img src="img/team/team-1-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
+                <div class="card__icon">
+                  <img src="img/team/icon-1.svg" alt="Идея">
+                </div>
+                <div class="card__text team-card__text">
+                  <h3 class="card__title team-card__title">Алексей Колмаков</h3>
+                  <!-- /.card__title -->
+                  <span class="card__job">Проектный менеджер</span>
+                  <strong class="card__experience">Опыт работы 8 лет</strong>
+                </div>
+                <!-- /.card__text -->
               </div>
-              <!-- /.card__text -->
+              <!-- /.card -->
             </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
-          <div class="col-32">
-            <div class="card design__card design__card--margin">
-              <img src="img/design/design-3.jpg" alt="Полный ремонт" class="card__image">
-              <div class="card__text design-card__text">
-                <h3 class="card__title design-card__title">Полный</h3>
-                <!-- /.card__title -->
-                <ul class="card__list design-card__list">
-                  <li class="card__item">Измерительные чертежи</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Перепланировка</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Планировка мебели</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План потолков</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План этажей</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План электрики</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">План света</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Стенные развертки</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">3D визуализация</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Смета на материалы</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Выезд на подбор материалов</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Выбор мебели</li>
-                  <!-- /.card__item -->
-                </ul>
-                <!-- /.card__list -->
-                <strong class="card__pricetag design-card__pricetag">900 руб / М<sup>2</sup></strong>
+            <!-- /.col -->
+            <div class="col-32">
+              <div class="card team-card team__card">
+                <div class="card__icon card__icon-second-mobile">
+                  <img src="img/team/icon-2.svg" alt="Дизайн">
+                </div>
+                <img src="img/team/team-2.jpg" alt="Алиса Сухорукова" class="card__image team-card__image">
+                <img src="img/team/team-2-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
+                <div class="card__text team-card__text">
+                  <h3 class="card__title team-card__title">Алиса Сухорукова</h3>
+                  <!-- /.card__title -->
+                  <span class="card__job">Дизайнер</span>
+                  <strong class="card__experience">Опыт работы 6 лет</strong>
+                </div>
+                <!-- /.card__text -->
               </div>
-              <!-- /.card__text -->
+              <!-- /.card -->
             </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
-        </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.contaier -->
-    </section>
-    <section class="section team" id="team">
-      <div class="container">
-        <div class="section-title team__section-title">
-          <h2 class="section-title__heading team__heading">Наша команда</h2>
-          <!-- /.section-title__heading -->
-          <div class="section-title__image team__image">
-            <img src="img/team.svg" alt="team">
-          </div>
-          <!-- /.section-title__image -->
-          <p class="section-title__text team__text">
-            Наша команда помогла стать счастливее более чем 500 семьям, и мы не собираемся останавливаться
-          </p>
-        </div>
-        <!-- /.section-title -->
-        <div class="row team__row">
-          <div class="col-32">
-            <div class="card team-card team__card">
-              <img src="img/team/team-1.jpg" alt="Алексей Колмаков" class="card__image team-card__image">
-              <img src="img/team/team-1-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
-              <div class="card__icon">
-                <img src="img/team/icon-1.svg" alt="Идея">
+            <!-- /.col -->
+            <div class="col-32">
+              <div class="card team-card team__card team__card--margin">
+                <div class="card__icon card__icon-third-mobile">
+                  <img src="img/team/icon-3.svg" alt="Чемодан">
+                </div>
+                <img src="img/team/team-3.jpg" alt="Давид Волынев" class="card__image team-card__image">
+                <img src="img/team/team-3-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
+                <div class="card__text team-card__text">
+                  <h3 class="card__title team-card__title">Давид Волынев</h3>
+                  <!-- /.card__title -->
+                  <span class="card__job">Бригадир</span>
+                  <strong class="card__experience">Опыт работы 7 лет</strong>
+                </div>
+                <!-- /.card__text -->
               </div>
-              <div class="card__text team-card__text">
-                <h3 class="card__title team-card__title">Алексей Колмаков</h3>
-                <!-- /.card__title -->
-                <span class="card__job">Проектный менеджер</span>
-                <strong class="card__experience">Опыт работы 8 лет</strong>
-              </div>
-              <!-- /.card__text -->
+              <!-- /.card -->
             </div>
-            <!-- /.card -->
+            <!-- /.col -->
           </div>
-          <!-- /.col -->
-          <div class="col-32">
-            <div class="card team-card team__card">
-              <div class="card__icon card__icon-second-mobile">
-                <img src="img/team/icon-2.svg" alt="Дизайн">
-              </div>
-              <img src="img/team/team-2.jpg" alt="Алиса Сухорукова" class="card__image team-card__image">
-              <img src="img/team/team-2-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
-              <div class="card__text team-card__text">
-                <h3 class="card__title team-card__title">Алиса Сухорукова</h3>
-                <!-- /.card__title -->
-                <span class="card__job">Дизайнер</span>
-                <strong class="card__experience">Опыт работы 6 лет</strong>
-              </div>
-              <!-- /.card__text -->
-            </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
-          <div class="col-32">
-            <div class="card team-card team__card team__card--margin">
-              <div class="card__icon card__icon-third-mobile">
-                <img src="img/team/icon-3.svg" alt="Чемодан">
-              </div>
-              <img src="img/team/team-3.jpg" alt="Давид Волынев" class="card__image team-card__image">
-              <img src="img/team/team-3-mobile.jpg" alt="Алексей Колмаков" class="card__image team-card__image-mobile">
-              <div class="card__text team-card__text">
-                <h3 class="card__title team-card__title">Давид Волынев</h3>
-                <!-- /.card__title -->
-                <span class="card__job">Бригадир</span>
-                <strong class="card__experience">Опыт работы 7 лет</strong>
-              </div>
-              <!-- /.card__text -->
-            </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
-        </div>
-        <!-- /.row -->
-        <p class="team__description">Каждый сотрудник нашей компании является квалифицированным штатным специалистом с опытом работы от 6 лет. У нас нет гастарбайтеров, каждый сотрудник выполняет работу, соответствующую его специальности.</p>
-      </div>  
-    </section> 
+          <!-- /.row -->
+          <p class="team__description">Каждый сотрудник нашей компании является квалифицированным штатным специалистом с опытом работы от 6 лет. У нас нет гастарбайтеров, каждый сотрудник выполняет работу, соответствующую его специальности.</p>
+        </div>  
+      </section> 
+    </div>
   </main>
   <footer class="footer section--dark">
     <div class="container">
@@ -542,10 +543,7 @@
             </a>
           </div>
         </div>
-        <div class="ymap-container"></div>
-          <div class="loader loader-default"></div>
-          <div class="map footer__map" id="map"></div>
-        </div>
+        <div class="map footer__map" id="map"></div>
         <!-- /.map -->
       </div>
     </div>
