feat: add link target=blank

--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
         </div>
         <!-- /.contaier -->
       </section>
-      <section class="section team" id="team">
+      <section class="section team">
         <div class="container">
-          <div class="section-title team__section-title">
+          <div class="section-title team__section-title" id="team">
             <h2 class="section-title__heading team__heading">Наша команда</h2>
             <!-- /.section-title__heading -->
             <div class="section-title__image team__image">
@@ -609,7 +609,7 @@
     <div class="thanks__dialog">
       <button class="thanks__close"></button>
       <strong class="thanks__text">Заявка отправлена, мы свяжемся с вами через 10 минут</strong>
-      <p class="thanks__group">Вы можете подписаться <a href="https://vk.com/glo_academy" class="thanks__VK">на нашу группу в VK</a></p>
+      <p class="thanks__group">Вы можете подписаться <a href="https://vk.com/glo_academy" target="_blank" class="thanks__VK">на нашу группу в VK</a></p>
     </div>
   </div>
   <button class="button-up">Наверх</button>
