refact: size card section types and design

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- /.hero__content -->
       </div>
       <!-- /.container -->
-      <a href="#" class="hero__scroll-down">листайте вниз</a>
+      <a href="#projects" class="hero__scroll-down">листайте вниз</a>
     </section>
     <!-- /.hero -->
     <section class="section section--dark projects" id="projects">
@@ -175,150 +175,152 @@
       <!-- /.container -->
     </section>
     <!-- /.section section-dark projects -->
-    <section class="section control">
-      <div class="container">
-        <div class="section-title control__section-title section-title--light">
-          <h2 class="section-title__heading">Онлайн контроль</h2>
-          <!-- /.section-title__heading -->
-          <div class="section-title__image control__image">
-            <img src="img/video.svg" alt="video">
-          </div>
-          <!-- /.section-title__image -->
-        </div>
-        <!-- /.section-title -->
-        <div class="control__video video" id="player">
-          <script src="https://www.youtube.com/iframe_api"></script>
-          <img src="img/play-icon.svg" alt="play icon" class="video__play">
-        </div>
-        <!-- /.control__video video -->
-        <p class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
-        <form action="send.php" method="POST" class="form control__form">
-          <div class="control__input-group">
-            <label for="control-user-name" class="label form__label control__label">Имя</label>
-            <input type="text" autocomplete="off" name="userName" class="input form__input control__input" id="control-user-name" placeholder="Как вас зовут:">
-          </div>
-          <div class="control__input-group">
-            <label for="control-user-phone" class="label form__label control__label">Телефон</label>
-            <input type="tel" autocomplete="off" name="userPhone" class="input form__input control__input" id="control-user-phone" placeholder="Ваш номер телефона:">
-          </div>
-          <button class="button button--primary control__button">Отправить</button>
-          <div class="policy control__policy">
-            <input type="checkbox" name="policyCheckbox" id="control__policy-checkbox" class="policy__checkbox" checked>
-            <label for="control__policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
-          </div>
-          <!-- /.policy -->
-        </form>
-        <!-- /.form control__form -->
-      </div>
-    </section>
-    <section class="section types">
-      <div class="container">
-        <div class="section-title types__section-title">
-          <h2 class="section-title__heading section-title__heading--black">Виды ремонта</h2>
-          <!-- /.section-title__heading -->
-          <div class="section-title__image">
-            <img src="img/repair.svg" alt="video">
-          </div>
-          <!-- /.section-title__image -->
-        </div>
-        <!-- /.section-title -->
-        <div class="row types__row">
-          <div class="col-32">
-            <div class="card types__card">
-              <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
-              <div class="card__text">
-                <h3 class="card__title types-card__title">Косметический ремонт</h3>
-                <!-- /.card__title -->
-                <ul class="card__list">
-                  <li class="card__item">Демонтаж старых покрытий</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Поклейка обоев</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Роспись стен и потолков</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Укладка полов</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена сантехники</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена розеток и выключателей</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена дверей</li>
-                  <!-- /.card__item -->
-                </ul>
-                <!-- /.card__list -->
-                <strong class="card__pricetag card__pricetag--lg">от 900 руб / М<sup>2</sup></strong>
-              </div>
-              <!-- /.card__text -->
+    <div class="types-bg-lines">
+      <section class="section control">
+        <div class="container">
+          <div class="section-title control__section-title section-title--light">
+            <h2 class="section-title__heading">Онлайн контроль</h2>
+            <!-- /.section-title__heading -->
+            <div class="section-title__image control__image">
+              <img src="img/video.svg" alt="video">
             </div>
-            <!-- /.card -->
+            <!-- /.section-title__image -->
           </div>
-          <!-- /.col -->
-          <div class="col-32">
-            <div class="card types__card">
-              <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
-              <div class="card__text">
-                <h3 class="card__title types-card__title">Капитальный ремонт</h3>
-                <!-- /.card__title -->
-                <ul class="card__list">
-                  <li class="card__item">Демонтаж старых покрытий</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Поклейка обоев</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Роспись стен и потолков</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Укладка полов</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена сантехники</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена розеток и выключателей</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена дверей</li>
-                  <!-- /.card__item -->
-                </ul>
-                <!-- /.card__list -->
-                <strong class="card__pricetag">от 1800 руб / М<sup>2</sup></strong>
-              </div>
-              <!-- /.card__text -->
+          <!-- /.section-title -->
+          <div class="control__video video" id="player">
+            <script src="https://www.youtube.com/iframe_api"></script>
+            <img src="img/play-icon.svg" alt="play icon" class="video__play">
+          </div>
+          <!-- /.control__video video -->
+          <p class="control__text">На каждом объекте установлена ​​камера, которая транслирует ход работы на часах. В любой момент вы можете зайти на наш сайт и следить за ходом работы в вашей квартире. Посмотрите прямую трансляцию с одного из наших объектов! Оставьте заявку ниже чтобы получить ссылку на трансляцию.</p>
+          <form action="send.php" method="POST" class="form control__form">
+            <div class="control__input-group">
+              <label for="control-user-name" class="label form__label control__label">Имя</label>
+              <input type="text" autocomplete="off" name="userName" class="input form__input control__input" id="control-user-name" placeholder="Как вас зовут:">
             </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
-          <div class="col-32">
-            <div class="card types__card">
-              <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
-              <div class="card__text">
-                <h3 class="card__title types-card__title">Дизайнерский ремонт</h3>
-                <!-- /.card__title -->
-                <ul class="card__list">
-                  <li class="card__item">Демонтаж старых покрытий</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Поклейка обоев</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Роспись стен и потолков</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Укладка полов</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена сантехники</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена розеток и выключателей</li>
-                  <!-- /.card__item -->
-                  <li class="card__item">Замена дверей</li>
-                  <!-- /.card__item -->
-                </ul>
-                <!-- /.card__list -->
-                <strong class="card__pricetag card__pricetag--md">от 4000 руб / М<sup>2</sup></strong>
-              </div>
-              <!-- /.card__text -->
+            <div class="control__input-group">
+              <label for="control-user-phone" class="label form__label control__label">Телефон</label>
+              <input type="tel" autocomplete="off" name="userPhone" class="input form__input control__input" id="control-user-phone" placeholder="Ваш номер телефона:">
             </div>
-            <!-- /.card -->
-          </div>
-          <!-- /.col -->
+            <button class="button button--primary control__button">Отправить</button>
+            <div class="policy control__policy">
+              <input type="checkbox" name="policyCheckbox" id="control__policy-checkbox" class="policy__checkbox" checked>
+              <label for="control__policy-checkbox" class="policy__label control__policy-label">Я соглашаюсь с обработкой данных</label>
+            </div>
+            <!-- /.policy -->
+          </form>
+          <!-- /.form control__form -->
         </div>
-        <!-- /.row -->
-      </div>
-      <!-- /.contaier -->
-    </section>
-    <!-- /.section types -->
+      </section>
+      <section class="section types">
+        <div class="container">
+          <div class="section-title types__section-title">
+            <h2 class="section-title__heading section-title__heading--black">Виды ремонта</h2>
+            <!-- /.section-title__heading -->
+            <div class="section-title__image">
+              <img src="img/repair.svg" alt="video">
+            </div>
+            <!-- /.section-title__image -->
+          </div>
+          <!-- /.section-title -->
+          <div class="row types__row">
+            <div class="col-32">
+              <div class="card types__card">
+                <img src="img/types/type-1.jpg" alt="Косметический ремонт" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title types-card__title">Косметический ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag card__pricetag--lg">от 900 руб / М<sup>2</sup></strong>
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col-32">
+              <div class="card types__card">
+                <img src="img/types/type-2.jpg" alt="Капитальный ремонт" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title types-card__title">Капитальный ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag">от 1800 руб / М<sup>2</sup></strong>
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+            <div class="col-32">
+              <div class="card types__card">
+                <img src="img/types/type-3.jpg" alt="Дизайнерский ремонт" class="card__image">
+                <div class="card__text">
+                  <h3 class="card__title types-card__title">Дизайнерский ремонт</h3>
+                  <!-- /.card__title -->
+                  <ul class="card__list">
+                    <li class="card__item">Демонтаж старых покрытий</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Поклейка обоев</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Роспись стен и потолков</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Укладка полов</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена сантехники</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена розеток и выключателей</li>
+                    <!-- /.card__item -->
+                    <li class="card__item">Замена дверей</li>
+                    <!-- /.card__item -->
+                  </ul>
+                  <!-- /.card__list -->
+                  <strong class="card__pricetag card__pricetag--md">от 4000 руб / М<sup>2</sup></strong>
+                </div>
+                <!-- /.card__text -->
+              </div>
+              <!-- /.card -->
+            </div>
+            <!-- /.col -->
+          </div>
+          <!-- /.row -->
+        </div>
+        <!-- /.contaier -->
+      </section>
+      <!-- /.section types -->
+    </div>
     <div class="team-bg-lines">
       <section class="section design">
         <div class="container">
