refact: js function scroll on click a, make instagram link is worked

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <main>
     <section class="hero" id="main">
       <div class="instagram hero__instagram">
-        <a href="https://www.instagram.com/masterdon1.ru" target="_blank" class="instagram__link">Instagram</a>
+        <a href="https://www.instagram.com/masterdon1.ru/" target="_blank" class="instagram__link">Instagram</a>
       </div>
       <div class="container">
         <div class="hero__content">
